Slider fix glitch and white space at edge, arrow fix

--- a/app/css/slider.css
+++ b/app/css/slider.css
@@ -92,8 +92,8 @@ div.desktop-card-navigation-wrapper {
     box-shadow: 0 0 10px 2px black;
 
     background: #7800FF /* #indigo */;
-    margin-right: -15px;
-    padding-top: 18px;
+    margin-right: 25px;
+    padding-top: 22px;
 }
 
 
@@ -110,8 +110,8 @@ div.desktop-card-navigation-wrapper {
     box-shadow: 0 0 10px 2px black;
     z-index: 1;
     background: #7800FF /* #indigo */;
-    margin-left: -15px;
-    padding-top: 18px;
+    margin-left: 25px;
+    padding-top: 22px;
 }
 
 
@@ -131,7 +131,7 @@ div.desktop-card-navigation-wrapper {
 
 .slick-track {
     margin: 0;
-    transition: margin .2s;
+    transition: margin .1s;
 }
 
 .slick-track_right {
@@ -160,3 +160,31 @@ div.desktop-card-navigation-wrapper {
     }
 }
 
+.owl-carousel {
+    margin-left: -35px;
+    margin-right: -35px;
+}
+
+.slick-slide {
+    padding: 0 10px;
+}
+
+
+@media screen and (max-width: 768px) {
+    .owl-carousel {
+        margin-left: -10px;
+        margin-right: -10px;
+    }
+
+    .slick-slide {
+        padding: 0 10px;
+    }
+
+}
+
+@media screen and (min-width: 1680px) {
+    .owl-carousel {
+        margin-left: -70px;
+        margin-right: -70px;
+    }
+}
